<resources>
    <string name="user_name">Name</string>
    <string name="item_name">Item</string>
    <string name="item_value">Item value</string>
    <string name="pay_via_tamara">Pay via Tamara</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="value_with_currency">%1$s %2$s</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="consumer_info">Consumer\'s Information</string>
    <string name="riskAssessment">RiskAssessment</string>
    <string name="first_order">This is my first order</string>
    <string name="select_items">Select items</string>
    <string name="sku">SKU</string>
    <string name="price">Price</string>
    <string name="check_out">Check out</string>
    <string name="total_item">Items</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address_line1">Address 1</string>
    <string name="address_line2">Address 2</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="city">City</string>
    <string name="use_this_for_billing">Use this as billing address</string>
    <string name="next">Next</string>
    <string name="select_address">Select address</string>
    <string name="shipping_fee">Shipping fee</string>
    <string name="payment_success">Payment success!</string>
    <string name="payment_cancel">Payment cancelled!</string>
    <string name="payment_error">Something went wrong</string>
    <string name="select_billing_address">Billing address</string>
    <string name="tax_with_amount">Tax: %s</string>
    <string name="item_price">Price after discount</string>
    <string name="total_price">Total price</string>
    <string name="launch_event_discount">Launch event\'s discount</string>
    <string name="neg_value">-%s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_create_order">Test create order</string>
    <string name="test_checkout_only">Test checkout only</string>
    <string name="payment_cancel_from_fragment">Payment canceled (fragment)</string>
    <string name="payment_error_from_fragment">Payment error (Fragment)</string>
    <string name="payment_success_from_fragment">Payment success (fragment)</string>
    <string name="test_from_fragment">Test from fragment</string>
</resources>
