<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="co.tamara.example.MainActivity">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragmentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_general"
            android:text="@string/quick_test_from_fragment"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginTop="@dimen/margin_general"
            android:layout_marginEnd="@dimen/margin_general"
            android:text="@string/consumer_info"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_general"
            app:cardCornerRadius="@dimen/card_radius"
            app:contentPadding="@dimen/padding_general">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/first_name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/firstNameTxt"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/last_name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lastNameTxt"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/email" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/emailTxt"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/phoneTxt"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/firstOrderCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_general"
                    android:text="@string/first_order" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/shopBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_general"
            android:text="@string/select_items" />

        <co.tamara.sdk.widget.PayWithTamaraWidget
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tamara_margin_general"/>

    </LinearLayout>
</ScrollView>